<resources>
    <string name="app_name">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="title_activity_main_activitysdfg">MainActivitysdfg</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>
    <string name="notes_start_activity">Заметки</string>
    <string name="settings">Настройки</string>
    <string name="application_details">Сведения о приложении</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="about_developers">about_developers</string>
    <string name="toast">Toast</string>
    <string name="clear">clear</string>
    <string name="show_toast">Show Toast</string>
    <string name="snackbar">SnackBar</string>
    <string name="snackbarwithaction">snackbarwithaction</string>
    <string name="alert_dialog">alert dialog</string>
    <string name="custom_alert_dialog">Custom Alert Dialog</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="dialog_fragment_custom">dialog fragment custom</string>
    <string name="bottom_sheet_dialog_fragment">BottomSheetDialogFragment</string>
    <string name="show_alertdialogcustomlist">show AlertDialogCustomList</string>
    <string name="pushnotification">PushNotification</string>
    <string name="alertdialogcustomlistmulti">AlertDialogCustomListMulti</string>
    <string name="alertdialogcustomlistsingle">AlertDialogCustomListSingle</string>
</resources>