<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".NotesFragment"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToast"
            android:text="@string/show_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSnackBar"
            android:text="@string/snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSnackBarWithAction"
            android:text="@string/snackbarwithaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialog"
            android:text="@string/alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCustomView"
            android:text="@string/custom_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialogFragment"
            android:text="@string/dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialogFragmentCustom"
            android:text="@string/dialog_fragment_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBottomSheetDialogFragment"
            android:text="@string/bottom_sheet_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPushNotification"
            android:text="@string/pushnotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialogCustomList"
            android:text="@string/show_alertdialogcustomlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialogCustomListSingle"
            android:text="@string/alertdialogcustomlistsingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAlertDialogCustomListMulti"
            android:text="@string/alertdialogcustomlistmulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>