<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center|bottom"
    android:background="@drawable/fish"
    tools:context=".StartActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/notes_list_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_start_activity"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/app_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_details"/>

</LinearLayout>